<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity"
    android:orientation="vertical"

   >



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cabin_bold"
            android:padding="10dp"
            android:text="Grievance Reporting"
            android:textAlignment="center"
            android:textColor="#241a6c"
            android:textSize="30dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_regular"
            android:padding="5dp"
            android:text="Which is Your Taluk?"
            android:textAlignment="center"
            android:textColor="#282828"
            android:textSize="25dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/chik"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/bg_screen1"
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                    android:padding="5dp"
                    android:layout_weight="20"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@mipmap/ic_chikaballapur"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:fontFamily="@font/cabin_regular"
                    android:textColor="@color/white"
                    android:layout_weight="5"
                    android:textSize="35dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/taluk_chikkaballapur"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/bg_screen2"
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:padding="5dp"
                        android:layout_weight="20"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@mipmap/ic_chinta"
                        />
                    <TextView
                        android:layout_gravity="center"
                        android:fontFamily="@font/cabin_regular"
                        android:textColor="@color/white"
                        android:layout_weight="5"
                        android:textSize="35dp"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/taluk_chintamani"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/bg_screen3"
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:padding="5dp"
                        android:layout_weight="20"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@mipmap/ic_gauri"
                        />
                    <TextView
                        android:layout_gravity="center"
                        android:fontFamily="@font/cabin_regular"
                        android:textColor="@color/white"
                        android:layout_weight="5"
                        android:textSize="35dp"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/taluk_gauribinuru"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/bg_screen4"
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:padding="5dp"
                        android:layout_weight="20"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@mipmap/ic_sid"
                        />
                    <TextView
                        android:layout_gravity="center"
                        android:fontFamily="@font/cabin_regular"
                        android:textColor="@color/white"
                        android:layout_weight="5"
                        android:textSize="35dp"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/taluk_shillaghatta"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/deep_orange"
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:padding="5dp"
                        android:layout_weight="20"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@mipmap/ic_bage"
                        />
                    <TextView
                        android:layout_gravity="center"
                        android:fontFamily="@font/cabin_regular"
                        android:textColor="@color/white"
                        android:layout_weight="5"
                        android:textSize="35dp"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/taluk_bageepalli"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/brown"
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:padding="5dp"
                        android:layout_weight="20"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:src="@mipmap/ic_gaudi"
                        />
                    <TextView
                        android:layout_gravity="center"
                        android:fontFamily="@font/cabin_regular"
                        android:textColor="@color/white"
                        android:layout_weight="5"
                        android:textSize="35dp"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/taluk_gudibanda"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>





</LinearLayout>